clusters/k3s-home/infrastructure/01-cilium/hubble-httproute.yaml
# clusters/k3s-home/infrastructure/01-cilium/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
      sectionName: https
  hostnames:
    - "hubble.fletcherlabs.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
          weight: 1
